--- a/client/js/components/UserProfile/UserProfile.scss
+++ b/client/js/components/UserProfile/UserProfile.scss
@@ -4,6 +4,7 @@
 .component {
   width: 100%;
   min-height: 60px;  // TODO: Static value is not good. Revise this
+  text-align: center;
 }
 
 .component-pad {
